<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sura_controllers</name>
  <version>0.0.0</version>
  <description>SURA AUV and USV ROS 2 controllers</description>
  <maintainer email="barajas@uji.es">usuario</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>osqp_vendor</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>sura_msgs</depend>
  <depend>tinyxml2</depend>
  <depend>tf2</depend>
  <depend>yaml-cpp</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
